Primeiros passos endpoints: Criação do Javalin, endpoints para /player.